feat: simple slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="singolo1.css">
     <title>SINGOLO</title>
 </head>
@@ -21,6 +21,11 @@
             <a href="#">CONTACT</a>
         </nav>
     </header>
-    <div class="header-bottom"></div>
+    <div class="slider">
+        <img class="chev chev_left" src="./assets/chev_l.svg" alt="chev left">
+        <div class="iphone"></div>
+        <div class="iphone"></div>
+        <img class="chev chev_left" src="./assets/chev_r.svg" alt="chev right">
+    </div>
 </body>
 </html>
