fead: final portfolio

--- a/singolo2.html
+++ b/singolo2.html
@@ -12,7 +12,7 @@
     <div class="portfolio">
         <div class="container">
             <h2>Portfolio</h2>
-            <h4>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</h4>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
             <ul>
                 <li>All</li>
                 <li>Web Design</li>
@@ -31,6 +31,7 @@
                 <img src="assets/image_9.svg" alt="image 9" class="img-for-portfolio">
                 <img src="assets/image_10.svg" alt="image 10" class="img-for-portfolio">
                 <img src="assets/image_11.svg" alt="image 11" class="img-for-portfolio">
+                <img src="assets/image_12.svg" alt="image 12" class="img-for-portfolio">
                 <img src="assets/image_12.svg" alt="image 12" class="img-for-portfolio">
             </div>
         </div>
