feat: add structure About Us

--- a/singolo2.html
+++ b/singolo2.html
@@ -36,5 +36,46 @@
             </div>
         </div>
     </div>
+    <div class="about-us">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <div class="staff">
+                <div class="first">
+                    <img src="assets/first.svg" alt="">
+                    <h3>Adam Jensen</h3>
+                    <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                    <div class="social-media">
+                        <img src="assets/facebook.svg" alt="facebook">
+                        <img src="assets/google.svg" alt="google">
+                        <img src="assets/twitter.svg" alt="twitter">
+                        <img src="assets/linked-in.svg" alt="linked-in">
+                    </div>
+                </div>
+                <div class="second">
+                    <img src="assets/second.svg" alt="">
+                    <h3>Desmond Miles</h3>
+                    <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                    <div class="social-media">
+                        <img src="assets/facebook.svg" alt="facebook">
+                        <img src="assets/google.svg" alt="google">
+                        <img src="assets/twitter.svg" alt="twitter">
+                        <img src="assets/linked-in.svg" alt="linked-in">
+                    </div>
+                </div>
+                <div class="third">
+                    <img src="assets/third.svg" alt="">
+                    <h3>Scolara Visari</h3>
+                    <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                    <div class="social-media">
+                        <img src="assets/facebook.svg" alt="facebook">
+                        <img src="assets/google.svg" alt="google">
+                        <img src="assets/twitter.svg" alt="twitter">
+                        <img src="assets/linked-in.svg" alt="linked-in">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
