--- a/singolo3.html
+++ b/singolo3.html
@@ -4,29 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="singolo3.css">
     <title>SINGOLO</title>
 </head>
 <body>
     <div class="get-a-quote">
-       <h2>Get a Quote</h2> 
-       <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-       <form>
-           <input type="text" name="name" placeholder="Name(Required)" required>
-           <input type="email" name="email" placeholder="Email(Required)" required>
-           <input type="text" name="subject" placeholder="Subject" required>
-           <input type="text" name="discribe" placeholder="Discribe you project in detail..." required>
-       </form>
-       <aside>
-           <h4>Contact Information</h4>
-           <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p> 
-            <
-            Elm St. 14/05 Lost City 
-            03528 331 86 35 
-            info@singolo.com
-       </aside>
+        <div class="wrapper">
+            <h2>Get a Quote</h2> 
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <div class="grid-for-form-and-aside">
+                <form>
+                    <input type="text" name="name" placeholder="Name(Required)">
+                    <input type="email" name="email" placeholder="Email(Required)" required>
+                    <input type="text" name="subject" placeholder="Subject" required>
+                    <textarea name="discribe" placeholder="Discribe you project in detail..."></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+                <aside>
+                    <h4>Contact Information</h4>
+                    <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p> 
+                    <ul class="contacts">
+                        <li><img src="" alt=""><a href="">Elm St. 14/05 Lost City</a></li>
+                        <li><img src="" alt=""><a href="tel:+03528 331 86 35">03528 331 86 35</a></li>
+                        <li><img src="" alt=""><a href="mailto:info@singolo.com">info@singolo.com</a></li>
+                    </ul>
+                </aside>
+            </div>
+        </div>
     </div>
     <footer>
-
+        <div class="wrapper">
+            <span class="copyright">&copy; Copyright 2013</span>
+            <div class="social-media">
+                <img src="assets/facebook.svg" alt="facebook">
+                <img src="assets/google.svg" alt="google">
+                <img src="assets/twitter.svg" alt="twitter">
+                <img src="assets/linked-in.svg" alt="linked-in">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
