--- a/singolo3.html
+++ b/singolo3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="singolo3.css">
     <title>SINGOLO</title>
 </head>
@@ -15,10 +15,10 @@
             <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             <div class="grid-for-form-and-aside">
                 <form>
-                    <input type="text" name="name" placeholder="Name(Required)">
+                    <input type="text" name="name" placeholder="Name(Required)" required>
                     <input type="email" name="email" placeholder="Email(Required)" required>
-                    <input type="text" name="subject" placeholder="Subject" required>
-                    <textarea name="discribe" placeholder="Discribe you project in detail..."></textarea>
+                    <input type="text" name="subject" placeholder="Subject">
+                    <textarea name="discribe" placeholder="Describe your project in detail..."></textarea>
                     <button type="submit">Submit</button>
                 </form>
                 <aside>
