feat: final version

--- a/singolo3.html
+++ b/singolo3.html
@@ -23,11 +23,11 @@
                 </form>
                 <aside>
                     <h4>Contact Information</h4>
-                    <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p> 
+                    <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p> 
                     <ul class="contacts">
-                        <li><img src="" alt=""><a href="">Elm St. 14/05 Lost City</a></li>
-                        <li><img src="" alt=""><a href="tel:+03528 331 86 35">03528 331 86 35</a></li>
-                        <li><img src="" alt=""><a href="mailto:info@singolo.com">info@singolo.com</a></li>
+                        <li class="address"><img src="assets/contact_address.svg" alt=""><a href="">Elm St. 14/05 Lost City</a></li>
+                        <li class="tel"><img src="assets/contact_tel.svg"  alt=""><a href="tel:+03528 331 86 35">03528 331 86 35</a></li>
+                        <li class="mail"><img src="assets/contact_mail.svg" alt=""><a href="mailto:info@singolo.com">info@singolo.com</a></li>
                     </ul>
                 </aside>
             </div>
