feat:  final version

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="block">
                     <div class="image"></div>
                     <h3>Inovative Ideas</h3>
-                    <h5>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</h5>
+                    <h5>Quisque luctus, quam eget molestie com&shy;modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</h5>
                 </div>
                 <div class="block">
                     <div class="image"></div>
@@ -78,12 +78,12 @@
                 <div class="block">
                     <div class="image"></div>
                     <h3>Responsive Layout</h3>
-                    <h5>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</h5>
+                    <h5>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae&shy;  sent elit leo.</h5>
                 </div>
                 <div class="block">
                     <div class="image"></div>
                     <h3>24 / 7 Support</h3>
-                    <h5>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</h5>
+                    <h5>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen&shy;tesque egestas venenatis lorem .</h5>
                 </div>
                 <div class="block">
                     <div class="image"></div>
