fix: pixel bugs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="container">
+            <div class="burger-button"></div>
             <h1>SINGOLO<span>*</span></h1>
             <nav id="header-n">
                 <a href="#home">HOME</a>
