feat: add slider animation in tablet version

--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
 </head>
 <body>
     <header>
+        <div class="menu-bg">
+                <div class="content">
+                    <span>
+                        <p>SINGOLO<span>*</span></p>
+                    </span>
+                    <nav id="header-n">
+                        <a href="#home">HOME</a>
+                        <a href="#services">SERVICES</a>
+                        <a href="#portfolio">PORTFOLIO</a>
+                        <a href="#about-us">ABOUT</a>
+                        <a href="#get-a-quote">CONTACT</a>
+                    </nav>
+                </div>
+            </div>
         <div class="container">
-            <div class="burger-button"></div>
+            <div class="burger-button">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <h1>SINGOLO<span>*</span></h1>
             <nav id="header-n">
                 <a href="#home">HOME</a>
